# Scientific-Computing

./: .bashrc  .gitignore  :wq  compile_commands.json  fluidsim  makefile
Assembly-Math/: makefile  mathtest  results.txt
Assembly-Math/include/: math_example.hpp
Assembly-Math/src/: assembly-comparison.cpp  complex_sum_reduction.asm  math_example.cpp  merge_sort.asm  simple_sum_reduction.asm
Benchmark-Tool/: CMakeLists.txt  benchmark.hpp
Benchmark-Tool/By-Reference-Constraint/: simple-byref.cpp
Benchmark-Tool/Class-Methods/: class  class-methods.cpp
Benchmark-Tool/General-Usage/: general  general-usage.cpp  test_benchmark_api.cpp
Benchmark-Tool/Hashtable-Initializer/: init-table.cpp
Fluid-Simulation/deprecated/: iterate.cu  spatial.cu
Fluid-Simulation/ignore/: fluid
Fluid-Simulation/include/: boundary.hpp  fluids.hpp  (+3 more)
Resource-Optimizer/: \  hypergraph.hpp  nodes  resource-nodes.cpp  swo-nodes.cpp  swo.hpp
Rust-Practice/: .gitignore
bankshot/: Cargo.toml  optimal_angle.txt
ignore/: sph.cu
include/: boundary.hpp  fluids.hpp  integrate.hpp  iterate.hpp  spatial.hpp
numeric_integrators/: Cargo.toml
outlier_remover/: Cargo.toml  outliers.txt
regression_approximation/: output.txt  small_data.txt  test_data.txt  visualize.py  weights.txt
regression_complex/: .gitignore  Cargo.toml  create_data.py  cubic_test.txt  gaussian.txt  guassian.txt  large_data.txt  learned_weights.txt  linear.txt  linear_small.txt  small_data.txt  test_data.txt  training_weights.txt  visualize.py
rust-benchmark/: Cargo.toml
src/: fluids.cpp  integrate.cu
(+4026 files in other folders)
